My-kart-User/my-kart-user-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-kart-user-service
  namespace: my-kart-user
spec:
  type: NodePort
  selector:
    app: my-kart-user
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30080  # You can change or omit this
